--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "barryvdh/laravel-debugbar": "^2.3",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
@@ -17,7 +16,13 @@
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "barryvdh/laravel-debugbar": "^2.3",
+        "phpspec/phpspec": "~2.1",
+        "squizlabs/php_codesniffer": "2.6.*",
+        "phpmd/phpmd": "2.4.*",
+        "sebastian/phpcpd": "*",
+        "suitmedia/php-code-standards": "dev-master"
     },
     "autoload": {
         "classmap": [
@@ -33,6 +38,16 @@
         }
     },
     "scripts": {
+        "test": "php vendor/bin/phpunit -c tests/phpunit.xml",
+        "test:all": [
+            "php vendor/bin/phpunit -c tests/phpunit.xml",
+            "@check-quality"
+        ],
+        "check-quality": [
+            "vendor/bin/phpcs --colors --standard=tests/myrules.xml app/",
+            "vendor/bin/phpmd app/,tests/ text codesize,controversial,naming,unusedcode --exclude app/Validator/",
+            "vendor/bin/phpcpd -vn app/ --exclude app/Validator/"
+        ],
         "post-root-package-install": [
             "php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
