--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^2.3",
+        "cakephp/cakephp-codesniffer": "2.*",
         "fzaninotto/faker": "~1.4",
         "laravel/browser-kit-testing": "^1.0",
         "laravel/dusk": "^1.1",
