--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
   - mysql -e 'create database homestead_test;'
   - composer self-update
   - composer install --no-interaction
+  - vendor/bin/phpcs --config-set installed_paths vendor/cakephp/cakephp-codesniffer
   - php artisan key:generate
 
 script:
