--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "algolia/algoliasearch-client-php": "^1.18",
+        "damiantw/laravel-scout-mysql-driver": "^1.0",
         "guzzlehttp/guzzle": "^6.2",
         "laravel/framework": "5.4.*",
+        "laravel/scout": "^3.0",
         "laravel/tinker": "~1.0",
         "laravelcollective/html": "^5.4",
         "symfony/dom-crawler": "^3.2",
